# DealScout

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: keepalive.yml
docs/features/: 00-feature-roadmap.md  00-foundations.md  01-intake.md  02-company-researcher.md  03-market-researcher.md  04-founder-researcher.md  05-orchestrator.md  06-memo-writer.md  10-service.md  11-deploy-render.md
my_work/: README.md
prompts/: company_researcher_v1.md  company_researcher_v2.md  founder_researcher_v1.md  market_researcher_v1.md  memo_writer_v1.md  memo_writer_v2.md  memo_writer_v3.md  orchestrator_v1.md  pdf_intake_v1.md  pdf_intake_v2.md  pdf_intake_v3.md  triage_v1.md  url_intake_v1.md  url_intake_v2.md  url_intake_v3.md
src/dealscout/: config.py  smoke.py  smoke_memo.py
src/dealscout/adapters/: llm.py  pdf.py  scraper.py  search.py
src/dealscout/agents/: company_researcher.py  founder_researcher.py  market_researcher.py  memo_writer.py  triage.py  (+3 more)
tests/eval/: README.md
tests/fixtures/: stripe_dossier.md
tests/integration/: test_company_researcher.py  test_founder_researcher.py  test_intake_pipeline.py  test_llm_adapter_real.py  test_market_researcher.py  test_memo_writer.py  test_orchestrator.py  test_service.py
tests/unit/: test_intake_extract.py  test_llm_adapter.py  test_pdf_adapter.py  test_scraper.py  test_search_adapter.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/scripts/: gen-og.mjs
web/src/: index.css  main.tsx  router.tsx
(+42 files in other folders)
