[project]
name = "dealscout"
version = "0.1.0"
description = "AI deal-flow analyst (Gemini-powered)"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.17,<0.18",  # pinned: 0.0.x in the doc was a placeholder; real latest is 0.17.x
    "openai>=1.40",               # Agents SDK dep; we use it directly to build the Gemini client
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langfuse>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "beautifulsoup4>=4.14.3",
    "pypdf>=6.11.0",
    "reportlab>=4.5.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "gradio>=6.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dealscout"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: real LLM, costs money (free tier on Gemini)"]
